--- a/18.11.24-pokemonApi/vite-project/src/copmponents/Card/style.css
+++ b/18.11.24-pokemonApi/vite-project/src/copmponents/Card/style.css
@@ -1,14 +1,18 @@
 .grid-container{
-    background-color: rgb(147, 147, 147);
+    background-color: rgb(255, 255, 255);
     display: grid;
     grid-template-columns: 2fr 2fr;
     gap: 15px;
     justify-items: center;
 }
 
-
 .Card{
-    display: grid;
+    background-image: url("../../assets/PokemonImage2_copy.png");
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: 65%;
+    display: flex;
+    flex-direction: row-reverse;
     justify-items: center;
     align-items: center;
     align-content: center;
@@ -18,6 +22,79 @@
     background-color: white;
     border-radius: 25px;
 }
+
+.img_container{
+    height: 350px;
+    border-bottom: 5px rgb(0, 0, 0) solid;
+    width: 100%;
+}
+
+.detailsContainer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+}
+
+.leftDetails{
+    color: white;
+}
+
+.leftDetails p{
+    font-size: 30px;
+    font-weight: 700;
+    padding: 10px;
+}
+
+.leftDetailsDivs{
+    display: flex;
+    text-align: center;
+    align-items: center;
+    gap: 5px;
+}
+
+.leftDetailsDivs div{
+    display: flex;
+    font-weight: 700;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(128, 128, 128, 0.6);
+    border-radius: 25px;
+    padding: 7px;
+}
+
+.rightDetails{
+    font-weight: 1000;
+    height: 50px;
+    width: 50px;
+    color: white;
+}
+
+.Card_img img{
+    width: 100px;
+    height: 100px;
+    
+}
+
+.Card_name{
+    display: grid;
+    gap:5px;
+}
+
+.pokemonType{
+    font-size: 20px;
+    padding: 15px;
+    color: white;
+    background-color: rgb(205, 211, 216);
+    border-radius: 20px;
+    border-style: none;
+    transition: 700ms;
+}
+
+.allCardTypes{
+    padding: 35px;
+}
+
 
 
 .Card_types{
