--- a/coinGeko/coinG/src/components/CoinsGek.css
+++ b/coinGeko/coinG/src/components/CoinsGek.css
@@ -1,9 +1,11 @@
 .container{
-    place-self: center;
-    padding: 40px;
     border-radius: 10px;
     background-image: linear-gradient(45deg, #2f4680, #500ae4);
     display: flex;
-    flex-direction: column;
-    align-items: center;
+}
+
+.container div{
+    background-color: #500ae4;
+    padding: 5px;
+    border-radius: 25px;
 }
